--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
-			<link rel="shortcut icon" type="img/png" href="/favicon.png?">
+			<link rel="shortcut icon" type="img/png" href="/img/favicon.png?">
 		</head>
 		<body>
 			<nav>
